...
    final prExercise = _prExerciseController.text.trim();
    final prValue = _prValueController.text.trim();

    if (weight != null && (weight < 30 || weight > 300)) {
      ScaffoldMessenger.of(context).showSnackBar(
        const SnackBar(
          content: Text('Въведете реално тегло между 30 и 300 кг!'),
          backgroundColor: AppColors.errorRed,
          behavior: SnackBarBehavior.floating,
        ),
      );
      return;
    }
...
                  child: _isSaving
                      ? const SizedBox(
                    height: 18,
                    width: 18,
                    child: CircularProgressIndicator(color: Colors.black, strokeWidth: 2),
                  )
                      : const Text('Запази резултатите'),
                ),
              ],
            ),
          ),
          const SizedBox(height: 16),

...
